# Inventory-Management

./: .gitignore  README.md  me.json
InventoryManagement/: CMakeLists.txt  Currency.cpp  CurrencyConverter.cpp  CurrencyConverter.h  CurrencyExchangeRates.csv  InvoiceNumbers.cpp  InvoiceNumbers.h  add_product_window.cpp  add_product_window.h  add_product_window.ui  add_to_invoice.cpp  add_to_invoice.h  add_to_invoice.ui  currency.h  currency_widget.cpp  currency_widget.h  currency_widget.ui  customer.cpp  customer.h  customer_signup_page.cpp  customer_signup_page.h  customer_signup_page.ui  data.csv  dataBase.db  datahandler.cpp  datahandler.h  edit_exchange_rate_window.cpp  edit_exchange_rate_window.h  edit_exchange_rate_window.ui  edit_product_window.cpp  edit_product_window.h  edit_product_window.ui  home_window.cpp  home_window.h  home_window.ui  inventory_widget.cpp  inventory_widget.h  inventory_widget.ui  invoice.cpp  invoice.h  (+44 more)
InventoryManagement/GUI/: add_product_window.cpp  add_product_window.h  add_product_window.ui  add_to_invoice.cpp  add_to_invoice.h  currency_widget.cpp  currency_widget.h  currency_widget.ui  customer_signup_page.cpp  customer_signup_page.h  edit_exchange_rate_window.cpp  edit_exchange_rate_window.h  edit_exchange_rate_window.ui  edit_product_window.cpp  edit_product_window.h  edit_product_window.ui  home_window.cpp  home_window.h  home_window.ui  inventory_widget.cpp  inventory_widget.h  inventory_widget.ui  invoice_widget.cpp  invoice_widget.h  invoice_widget.ui  mainwindow.cpp  mainwindow.h  product_information_window.cpp  product_information_window.h  product_information_window.ui  purchase_invoice_window.cpp  purchase_invoice_window.h  purchase_invoice_window.ui  purchase_widget.cpp  purchase_widget.h  purchase_widget.ui  reports_widget.cpp  reports_widget.h  reports_widget.ui  sale_invoice_window.cpp  (+4 more)
